# Simd

./: .drone.yml  .travis.yml
test/: CMakeLists.txt  UseFaceDetection.cpp  UseFaceDetection2.cpp  UseFaceDetection4.cpp
